This was a pain, but explore view is now presentable

--- a/XCode/DewertOkin/DewertOkin/RemoteControl/SecondRemote.storyboard
+++ b/XCode/DewertOkin/DewertOkin/RemoteControl/SecondRemote.storyboard
@@ -383,7 +383,7 @@
         <image name="remote_icon" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="NBl-g8-nGH"/>
+        <segue reference="edi-Vw-Fvw"/>
         <segue reference="G8l-fL-Fmg"/>
     </inferredMetricsTieBreakers>
 </document>
