--- a/XCode/DewertOkin/DewertOkin/Explore/Explore.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Explore/Explore.storyboard
@@ -1,7 +1,62 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YF5-Fd-qPP">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Explore View Controller-->
+        <scene sceneID="KpD-pq-GV2">
+            <objects>
+                <viewController id="txy-Vt-aDp" customClass="ExploreViewController" customModule="DewertOkin" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aBI-sA-6Nh">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="urf-Lw-g1n">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="urf-Lw-g1n" firstAttribute="trailing" secondItem="LO4-Fk-rNs" secondAttribute="trailing" id="12o-L4-Q0w"/>
+                            <constraint firstItem="urf-Lw-g1n" firstAttribute="bottom" secondItem="LO4-Fk-rNs" secondAttribute="bottom" id="8VT-Y5-rqk"/>
+                            <constraint firstItem="urf-Lw-g1n" firstAttribute="leading" secondItem="LO4-Fk-rNs" secondAttribute="leading" id="bU2-V3-avX"/>
+                            <constraint firstItem="urf-Lw-g1n" firstAttribute="top" secondItem="LO4-Fk-rNs" secondAttribute="top" id="pLi-5Y-kpX"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="LO4-Fk-rNs"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="FyY-fg-iMa"/>
+                    <connections>
+                        <outlet property="mapView" destination="urf-Lw-g1n" id="xwW-P4-m7Y"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xMC-q1-eEb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1076" y="-274.81259370314842"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="nRC-Hw-6RA">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YF5-Fd-qPP" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="P7G-zP-4K6">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="txy-Vt-aDp" kind="relationship" relationship="rootViewController" id="SYm-re-wNt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vp7-bC-xIl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="-274.81259370314842"/>
+        </scene>
+    </scenes>
 </document>
