--- a/XCode/DewertOkin/DewertOkin/Explore/Explore.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Explore/Explore.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YF5-Fd-qPP">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina6_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,11 +15,11 @@
             <objects>
                 <viewController id="txy-Vt-aDp" customClass="ExploreViewController" customModule="DewertOkin" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aBI-sA-6Nh">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="urf-Lw-g1n">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -46,11 +46,39 @@
             <objects>
                 <viewController id="G4K-hp-hJC" customClass="DetailVendorViewController" customModule="DewertOkin" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="np3-7O-lUD">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vXm-7x-Y17">
-                                <rect key="frame" x="166" y="323" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Uh-gf-DHg">
+                                <rect key="frame" x="0.0" y="112" width="414" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Street" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P0x-dH-qKQ">
+                                <rect key="frame" x="0.0" y="149" width="414" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Working hours" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tdL-0l-8X8">
+                                <rect key="frame" x="0.0" y="178" width="414" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Telephone number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aa0-Df-ldf">
+                                <rect key="frame" x="0.0" y="207" width="453" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BOw-VS-wHN">
+                                <rect key="frame" x="0.0" y="260" width="414" height="251"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Compatible Accessories Sold:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hh2-JE-r7p">
+                                <rect key="frame" x="0.0" y="244" width="414" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -58,20 +86,38 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="imb-U6-qZO" firstAttribute="bottom" secondItem="vXm-7x-Y17" secondAttribute="bottom" constant="323" id="4yu-03-Wag"/>
-                            <constraint firstItem="vXm-7x-Y17" firstAttribute="leading" secondItem="imb-U6-qZO" secondAttribute="leading" constant="166" id="9Cs-eC-pFC"/>
-                            <constraint firstItem="vXm-7x-Y17" firstAttribute="top" secondItem="imb-U6-qZO" secondAttribute="top" constant="303" id="jGP-Sa-TzY"/>
-                            <constraint firstItem="imb-U6-qZO" firstAttribute="trailing" secondItem="vXm-7x-Y17" secondAttribute="trailing" constant="167" id="uO0-L6-8k0"/>
+                            <constraint firstItem="4Uh-gf-DHg" firstAttribute="top" secondItem="imb-U6-qZO" secondAttribute="top" constant="68" id="52z-ue-wvH"/>
+                            <constraint firstItem="Hh2-JE-r7p" firstAttribute="leading" secondItem="imb-U6-qZO" secondAttribute="leading" id="Bat-Up-tCm"/>
+                            <constraint firstItem="tdL-0l-8X8" firstAttribute="leading" secondItem="imb-U6-qZO" secondAttribute="leading" id="DOP-cd-S3m"/>
+                            <constraint firstItem="tdL-0l-8X8" firstAttribute="top" secondItem="P0x-dH-qKQ" secondAttribute="bottom" constant="8" id="DPi-24-mTb"/>
+                            <constraint firstItem="P0x-dH-qKQ" firstAttribute="trailing" secondItem="imb-U6-qZO" secondAttribute="trailing" id="Iah-XX-UD3"/>
+                            <constraint firstItem="BOw-VS-wHN" firstAttribute="trailing" secondItem="imb-U6-qZO" secondAttribute="trailing" id="J0U-G9-wuz"/>
+                            <constraint firstItem="P0x-dH-qKQ" firstAttribute="top" secondItem="4Uh-gf-DHg" secondAttribute="bottom" constant="8" id="KWe-zg-4R0"/>
+                            <constraint firstItem="4Uh-gf-DHg" firstAttribute="leading" secondItem="imb-U6-qZO" secondAttribute="leading" id="LaW-xO-lVZ"/>
+                            <constraint firstAttribute="trailing" secondItem="Hh2-JE-r7p" secondAttribute="trailing" id="MtD-RY-Q68"/>
+                            <constraint firstItem="BOw-VS-wHN" firstAttribute="top" secondItem="Hh2-JE-r7p" secondAttribute="bottom" constant="8" id="Vdl-LM-YE0"/>
+                            <constraint firstAttribute="trailing" secondItem="Aa0-Df-ldf" secondAttribute="trailing" constant="-39" id="YIY-29-HLv"/>
+                            <constraint firstItem="P0x-dH-qKQ" firstAttribute="leading" secondItem="imb-U6-qZO" secondAttribute="leading" id="kpi-9F-MIl"/>
+                            <constraint firstItem="Aa0-Df-ldf" firstAttribute="top" secondItem="tdL-0l-8X8" secondAttribute="bottom" constant="8" id="n4g-hR-bae"/>
+                            <constraint firstItem="Hh2-JE-r7p" firstAttribute="top" secondItem="Aa0-Df-ldf" secondAttribute="bottom" constant="16" id="qTM-DD-VDl"/>
+                            <constraint firstItem="BOw-VS-wHN" firstAttribute="leading" secondItem="imb-U6-qZO" secondAttribute="leading" id="tq9-74-W1m"/>
+                            <constraint firstItem="Aa0-Df-ldf" firstAttribute="leading" secondItem="imb-U6-qZO" secondAttribute="leading" id="v0c-Sb-jX7"/>
+                            <constraint firstItem="4Uh-gf-DHg" firstAttribute="trailing" secondItem="imb-U6-qZO" secondAttribute="trailing" id="vf0-tu-6N1"/>
+                            <constraint firstItem="tdL-0l-8X8" firstAttribute="trailing" secondItem="imb-U6-qZO" secondAttribute="trailing" id="yUy-gX-Xz8"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="imb-U6-qZO"/>
                     </view>
                     <connections>
-                        <outlet property="vendorName" destination="vXm-7x-Y17" id="ljZ-UQ-zUJ"/>
+                        <outlet property="tableView" destination="BOw-VS-wHN" id="MAb-7t-CiM"/>
+                        <outlet property="vendorName" destination="4Uh-gf-DHg" id="h1c-rk-3dq"/>
+                        <outlet property="vendorStreet" destination="P0x-dH-qKQ" id="OZt-UM-95T"/>
+                        <outlet property="vendorTelephoneNumber" destination="Aa0-Df-ldf" id="weV-cJ-aPi"/>
+                        <outlet property="vendorWorkingHours" destination="tdL-0l-8X8" id="C0g-qz-0gV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ChO-o7-a20" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2260" y="-275"/>
+            <point key="canvasLocation" x="2260" y="-275.71214392803603"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="nRC-Hw-6RA">
@@ -79,7 +125,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YF5-Fd-qPP" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="P7G-zP-4K6">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
